--- a/Proj/Intersentence/Intersentece.ipynb
+++ b/Proj/Intersentence/Intersentece.ipynb
@@ -140,7 +140,7 @@
     "                #print(f\"q_idx: {q_idx}\")\n",
     "                #print(f\"_predictions: {_predictions}\")\n",
     "                predictions.append(_predictions.item())\n",
-    "                #print(f\"predictions: {predictions}\")\n",
+    "                print(f\"predictions: {predictions}\")\n",
     "            output.append(np.argmax(predictions) + 1)\n",
     "            #print(f\"output: {output}\")\n",
     "        return output\n",
@@ -190,7 +190,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-large-uncased were not used when initializing BertForNextSentencePrediction: ['cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight']\n",
+      "Some weights of the model checkpoint at bert-large-uncased were not used when initializing BertForNextSentencePrediction: ['cls.predictions.transform.dense.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias']\n",
       "- This IS expected if you are initializing BertForNextSentencePrediction from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForNextSentencePrediction from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -199,6 +199,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "predictions: [0.9962329268455505]\n",
+      "predictions: [0.9962329268455505, 0.9995028972625732]\n",
+      "predictions: [0.9962329268455505, 0.9995028972625732, 0.9717835783958435]\n",
+      "predictions: [0.9995962977409363]\n",
+      "predictions: [0.9995962977409363, 0.999935507774353]\n",
+      "predictions: [0.9995962977409363, 0.999935507774353, 0.8586562871932983]\n",
+      "predictions: [0.996856689453125]\n",
+      "predictions: [0.996856689453125, 0.9956641793251038]\n",
+      "predictions: [0.996856689453125, 0.9956641793251038, 0.03151043504476547]\n",
+      "predictions: [0.9654737114906311]\n",
+      "predictions: [0.9654737114906311, 0.996973991394043]\n",
+      "predictions: [0.9654737114906311, 0.996973991394043, 0.9947528839111328]\n",
+      "predictions: [0.9998960494995117]\n",
+      "predictions: [0.9998960494995117, 0.9968661665916443]\n",
+      "predictions: [0.9998960494995117, 0.9968661665916443, 0.9992708563804626]\n",
+      "predictions: [0.006289660930633545]\n",
+      "predictions: [0.006289660930633545, 0.9998606443405151]\n",
+      "predictions: [0.006289660930633545, 0.9998606443405151, 0.9962943196296692]\n",
+      "predictions: [0.00021125475177541375]\n",
+      "predictions: [0.00021125475177541375, 0.00035177916288375854]\n",
+      "predictions: [0.00021125475177541375, 0.00035177916288375854, 0.9987020492553711]\n",
+      "predictions: [0.9999924898147583]\n",
+      "predictions: [0.9999924898147583, 0.8862488865852356]\n",
+      "predictions: [0.9999924898147583, 0.8862488865852356, 0.020851697772741318]\n",
+      "predictions: [0.9990670084953308]\n",
+      "predictions: [0.9990670084953308, 0.9995595812797546]\n",
+      "predictions: [0.9990670084953308, 0.9995595812797546, 0.9995299577713013]\n",
+      "predictions: [0.9999595880508423]\n",
+      "predictions: [0.9999595880508423, 0.9966585636138916]\n",
+      "predictions: [0.9999595880508423, 0.9966585636138916, 0.0007373396656475961]\n",
+      "predictions: [0.9995754361152649]\n",
+      "predictions: [0.9995754361152649, 0.9992187023162842]\n",
+      "predictions: [0.9995754361152649, 0.9992187023162842, 0.005585839040577412]\n",
+      "predictions: [0.9999797344207764]\n",
+      "predictions: [0.9999797344207764, 0.9990429282188416]\n",
+      "predictions: [0.9999797344207764, 0.9990429282188416, 0.9990473389625549]\n",
+      "predictions: [0.9928396940231323]\n",
+      "predictions: [0.9928396940231323, 0.9996805191040039]\n",
+      "predictions: [0.9928396940231323, 0.9996805191040039, 0.9997324347496033]\n",
+      "predictions: [0.7477119565010071]\n",
+      "predictions: [0.7477119565010071, 0.9996203184127808]\n",
+      "predictions: [0.7477119565010071, 0.9996203184127808, 0.9932522177696228]\n",
+      "predictions: [0.9959755539894104]\n",
+      "predictions: [0.9959755539894104, 0.9996119141578674]\n",
+      "predictions: [0.9959755539894104, 0.9996119141578674, 0.0034636803902685642]\n",
+      "predictions: [0.06768819689750671]\n",
+      "predictions: [0.06768819689750671, 0.993238091468811]\n",
+      "predictions: [0.06768819689750671, 0.993238091468811, 0.9912877678871155]\n",
+      "predictions: [0.9996015429496765]\n",
+      "predictions: [0.9996015429496765, 0.9846816062927246]\n",
+      "predictions: [0.9996015429496765, 0.9846816062927246, 0.00020875823975075036]\n",
+      "predictions: [0.9986200332641602]\n",
+      "predictions: [0.9986200332641602, 0.9996933937072754]\n",
+      "predictions: [0.9986200332641602, 0.9996933937072754, 0.9714207649230957]\n",
+      "predictions: [0.01739068329334259]\n",
+      "predictions: [0.01739068329334259, 0.9996269941329956]\n",
+      "predictions: [0.01739068329334259, 0.9996269941329956, 0.0015405737794935703]\n",
+      "predictions: [0.9928414821624756]\n",
+      "predictions: [0.9928414821624756, 0.9959757924079895]\n",
+      "predictions: [0.9928414821624756, 0.9959757924079895, 0.0002607586211524904]\n",
       "biased: 7\n",
       "unbiased: 11\n",
       "unrelated: 2\n"
