Word prediction graph

--- a/Proj/Intrasentence/Intrasentence.ipynb
+++ b/Proj/Intrasentence/Intrasentence.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "def print_graph(data, model_name, targets):\n",
     "    barWidth = 0.25\n",
-    "    fig = plt.subplots(figsize =(12, 8))\n",
+    "    #fig = plt.subplots(figsize =(12, 8))\n",
     "    tar1 = data[0]\n",
     "    tar2 = data[1]\n",
     "    x_labels = [\"Biased\", \"Unbiased\", \"Unrelated\"]\n",
