--- a/Proj/Twitter Scraper/TwitterScraper.ipynb
+++ b/Proj/Twitter Scraper/TwitterScraper.ipynb
@@ -155,8 +155,8 @@
    ],
    "source": [
     "num_tweets = 1000\n",
-    "xx = \"(bitcoin OR btc) (#bitcoin OR #btc) lang:en until:2022-10-03 since:2019-08-23 -filter:replies (filter:safe OR -filter:safe)\"\n",
-    "topic = \"female refugee\"\n",
+    "xx = \"lang:en until:2022-10-03 since:2019-08-23 -filter:replies (filter:safe OR -filter:safe)\"\n",
+    "topic = \"refugee\"\n",
     "csv_path = \"results/\"+topic+\"_tweet.csv\"\n",
     "final_tweets_data = grab_tweets(num_tweets, topic)\n",
     "\n",
